--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,15 @@
 <!DOCTYPE html>
-<head></head>
-<body></body>
+<head>
+        <title>O Jogador</title>
+        <style type="text/css">
+            @import url("geral.css");
+        </style>
+        
+        <link rel="stylesheet" type="text/css" href="navegacao.css" />
+</head>
+<body>
+    <div id="geral">
+        <p>IAI GEIMERS</p>
+    </div>
+</body>
 </html>
