Mudanças no CSS e no HTML
Adicionei novas partes ao css que mudam o botão, barra de navegação, de pesquisa e topo.

--- a/Index.html
+++ b/Index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <head>
-        <title>O Jogador</title>
-        <style type="text/css">
-            @import url("geral.css");
-        </style>
-        
-        <link rel="stylesheet" type="text/css" href="navegacao.css" />
+        <title>Mundo Geek</title>
+        <link rel="stylesheet" type="text/css" href="geral.css" />
 </head>
-<body>
-    <div id="geral">
-        <p>IAI GEIMERS, QUALQUER COISA AQUI</p>
+<body id="PlanoDeFundo">
+    <!-- Cabeçalho do site -->
+    <div id="topo">
+        <header > 
+            <h1 id="logo">Mundo Geek</h1>
+            <form id="pesquisa" >
+                <input id="barradepesquisa" type="text"placeholder=" Esta perdido?"/>
+                <button id="botao1">Buscar</button>
+            </form>
+        </header>
+    </div>
+    <!-- Barra de navegação -->
+    <div>
+        <nav id="barradenavegacao">
+            <ul>
+                <li><a href="Index.html">Home</a></li>
+                <li><a>E-sport</a></li>
+                <li><a>Tecnologia</a></li>
+                <li><a>Animes e HQ's</a></li>
+                <li><a> Cinema e Tv</a></li>
+                <li><a>Videos</a></li>
+            </ul>
+        </nav>
     </div>
 </body>
 </html>
