--- a/animeehq.html
+++ b/animeehq.html
@@ -38,5 +38,31 @@
             </ul>
         </nav>
     </div>
+
+</br>
+<!-- Coluna de noticias -->
+<div>
+    <div id="coluna1">
+      <a href="noticia.html"></a><img src="Imagem/Death-Note-One-shot-manga-cover-destaque.jpg" style="width:308px;height:173px;"></a>
+      <h2>Death Note | Ryuk ressurge na capa da continuação</h2>
+      <p id="texto1"> O capítulo inédito de Death Note ganhou sua capa oficial (via Crunchyroll). A ilustração, que estampa a edição de fevereiro da revista Jump SQ, mostra o shinigami Ryuk ao lado de um garoto misterioso e uma maçã. </p>
+      <a>Ler Mais</a>
+    </div>
+    <div id="coluna2">
+      <img src="Imagem/thor-marvel-comics_widelg.jpg" style="width:308px;height:173px;">
+      <h2>Universo DC é destruído em nova HQ do Thor</h2>
+      <p id="texto1">A próxima edição da HQ do Thor mostra a dimensão cósmica da ameça do Inverno Mais Sombrio, com a destruição inesperada de uma Terra alternativa. A surpresa fica para a sugestão de que o mundo destruído seja a Terra da DC Comics.</p>
+      <a>Ler Mais</a>
+    </div>
+</div>
+</br>
+
+<!-- Roda o pé -->
+<div>
+<footer>
+    <p><h4> Grupo: Julio Gutemberg, Maierlly Oliveira e Rodrigo Pinho </h4></p>
+</footer>
+</div>
+
 </body>
 </html>
