--- a/cinemaetv.html
+++ b/cinemaetv.html
@@ -38,5 +38,30 @@
             </ul>
         </nav>
     </div>
+</br>
+<!-- Coluna de noticias -->
+<div>
+    <div id="coluna1">
+      <img src="Imagem/12195854548222.jpg" style="width:308px;height:173px;"></a>
+      <h2>Por que você deve voltar a assistir Westworld</h2>
+      <p id="texto1"> Westworld chamou a atenção desde sua primeira temporada com uma história densa sobre robôs de um parque de diversões que ganham consciência. Mas a história difícil e as várias linhas do tempo fizeram com que muitos fãs deixassem de ver a produção.</p>
+      <a>Ler Mais</a>
+    </div>
+    <div id="coluna2">
+      <img src="Imagem/20190622122709_UNI1tOtRGN.jpg" style="width:308px;height:173px;">
+      <h2>Como o coronavírus impacta os lançamentos da Marvel</h2>
+      <p id="texto1">O mundo do entretenimento está sentindo os efeitos do coronavírus e não é diferente com a Marvel, que já adiou ou parou a produção de vários projetos desde o começo da pandemia. </p>
+      <a>Ler Mais</a>
+    </div>
+</div>
+</br>
+
+<!-- Roda o pé -->
+<div>
+<footer>
+    <p><h4> Grupo: Julio Gutemberg, Maierlly Oliveira e Rodrigo Pinho </h4></p>
+</footer>
+</div>
+
 </body>
 </html>
