--- a/eSport.html
+++ b/eSport.html
@@ -38,5 +38,30 @@
             </ul>
         </nav>
     </div>
+</br>
+
+        <!-- Coluna de noticias -->
+        <div>
+            <div id="coluna1">
+              <a href="noticia.html"><img src="Imagem/brtt-pain-cblol.jpg" style="width:308px;height:173px;"></a>
+              <h2>Veja a lista de eventos cancelados por conta do Corona Virus</h2>
+              <p id="texto1">O cenário competitivo de esportes eletrônicos segue bastante afetado pelo coronavírus. Após a organização Mundial da Saúde declarar o COVID-19 pandemia, cada vez mais eventos estão mudando seus planos. </p>
+              <a href="noticia.html">Ler Mais</a>
+            </div>
+            <div id="coluna2">
+              <img src="Imagem/final_cblol_2019_tuiki-96.jpg" style="width:308px;height:173px;">
+              <h2>CBLoL 2020: tabela de jogos, datas, times e classificação do 1° Split</h2>
+              <p id="texto1">O 1° Split do Campeonato Brasileiro de League of Legends (CBLoL 2019) começa no dia 25 de janeiro com oito times na disputa pelo título. Atual campeão, o Flamengo defende o título contra uma badalada paiN Gaming que conta com o retorno de Felipe "brTT", INTZ, Redemption, FURIA Uppercut, Prodigy, KaBuM e Vivo Keyd. </p>
+              <a>Ler Mais</a>
+            </div>
+        </div>
+    </br>
+
+        <!-- Roda o pé -->
+    <div>
+        <footer>
+            <p><h4> Grupo: Julio Gutemberg, Maierlly Oliveira e Rodrigo Pinho </h4></p>
+        </footer>
+    </div>
 </body>
 </html>
