--- a/tecnologia.html
+++ b/tecnologia.html
@@ -38,5 +38,30 @@
             </ul>
         </nav>
     </div>
+</br>
+    <!-- Coluna de noticias -->
+    <div>
+        <div id="coluna1">
+          <a href="noticia.html"></a><img src="Imagem/galaxy-s20-sfo-01-mc.jpg" style="width:308px;height:173px;"></a>
+          <h2>Galaxy S20: coronavírus faz Samsung antecipar entrega de novos celulares</h2>
+          <p id="texto1"> Lançamento deste ano tem preço a partir de R$ 5.499. Tecnologia fotográfica foi refeita para funcionar melhor em diversas condições de uso.A Samsung Brasil decidiu antecipar em duas semanas a entrega os novos celulares Galaxy S20, Galaxy S20 Plus e Galaxy S20 Ultra. </p>
+          <a>Ler Mais</a>
+        </div>
+        <div id="coluna2">
+          <img src="Imagem/captura-de-tela-2020-03-18-as-13.44.09.jfif" style="width:308px;height:173px;">
+          <h2>Sony anuncia PlayStation 5 (PS5); veja especificações do lançamento</h2>
+          <p id="texto1">O PlayStation 5 (PS5) é oficial. A Sony acaba de anunciar, nesta quarta-feira (18), o novo console que chega sete anos após o lançamento do seu antecessor PlayStation 4 (PS4). A apresentação ocorreu durante uma transmissão online no PlayStation Blog, com comando de Mark Cerny, arquiteto-chefe responsável do aparelho.</p>
+          <a>Ler Mais</a>
+        </div>
+    </div>
+</br>
+
+    <!-- Roda o pé -->
+<div>
+    <footer>
+        <p><h4> Grupo: Julio Gutemberg, Maierlly Oliveira e Rodrigo Pinho </h4></p>
+    </footer>
+</div>
+
 </body>
 </html>
