--- a/videos.html
+++ b/videos.html
@@ -38,5 +38,30 @@
             </ul>
         </nav>
     </div>
+</br>
+<!-- Coluna de noticias -->
+<div>
+    <div id="coluna1">
+        <iframe width="308" height="173" src="https://www.youtube.com/embed/OLzBU4Jltzw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <h2>Sett - Guia Completo - League Of Legends</h2>
+    </br>
+      <a href="https://www.youtube.com/watch?v=OLzBU4Jltzw">Assita no YouTube</a>
+    </div>
+    <div id="coluna2">
+        <iframe width="308" height="173" src="https://www.youtube.com/embed/a9MULbZ9PMg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <h2>Terror em Demacia | League of Legends</h2>
+    </br>
+      <a href="https://www.youtube.com/watch?v=a9MULbZ9PMg">Assita no YouTube</a>
+    </div>
+</div>
+</br>
+
+<!-- Roda o pé -->
+<div>
+<footer>
+    <p><h4> Grupo: Julio Gutemberg, Maierlly Oliveira e Rodrigo Pinho </h4></p>
+</footer>
+</div>
+
 </body>
 </html>
